Added image ex for Maer Jono

--- a/maer-jono.html
+++ b/maer-jono.html
@@ -209,6 +209,14 @@
                                         Filters menu allows Health Care Workers to switch between the order of their patients depending on their location. It is optimal to take the path that is shortest to order each patient. If rated after giving birth, a woman can be risked for post partum and get the help she needs urgently.
                                         The pencil on individual portfolios will make the keyboard pop-up for editing their profiles.   
                                 </p>
+                                <img width="150px" src="assets/img/BreakInequality/Phone.png">
+                                <img width="150px" src="assets/img/BreakInequality/HomePage.png">
+                                <img width="150px" src="assets/img/BreakInequality/Login.png">
+                                <img width="150px" src="assets/img/BreakInequality/List of People.png">
+                                <img width="150px" src="assets/img/BreakInequality/Individual Info.png">
+                                <img width="150px" src="assets/img/BreakInequality/Individual Map.png">
+                                <img width="150px" src="assets/img/BreakInequality/Filters.png">
+                                <img width="150px" src="assets/img/BreakInequality/Settings.png">
                             </div>
                         </div>
                     </div>
@@ -225,6 +233,12 @@
                                     <strong>Date:</strong>
                                 </td>
                                 <td>Fall 2016</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <strong>Tools:</strong>
+                                </td>
+                                <td>Sketch, Photoshop</td>
                             </tr>
                             <!-- <tr>
                                 <td>
@@ -244,7 +258,7 @@
             </div>
         </div>
 
-        <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg">
+        <!-- <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg"> -->
 
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
