--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="maer-jono.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/BreakInequality/HomePageBreakInequality.jpg');"></div>
+                            <div style="background-image: url('assets/img/BreakInequality/HomePage.png');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
