Added project images for aqua

--- a/aquabicylinder.html
+++ b/aquabicylinder.html
@@ -178,6 +178,11 @@
                                 <p>
                                     To create a durable device that should reduce the negative health effects, decrease the time, and increase the amount of water transported each trip.  
                                 </p>
+                                <img width="350px" src="assets/img/Aquabicylinder/cad.jpg">
+                                <img width="350px" src="assets/img/Aquabicylinder/MFP.jpeg">
+                                <img width="350px" src="assets/img/Aquabicylinder/HFP.jpeg">
+                                <img width="350px" src="assets/img/Aquabicylinder/bucketOnly.jpg">
+                                <img width="350px" src="assets/img/Aquabicylinder/prototype.jpg">
                             </div>
                         </div>
                     </div>
@@ -194,6 +199,12 @@
                                     <strong>Date:</strong>
                                 </td>
                                 <td>Fall 2015</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <strong>Tools:</strong>
+                                </td>
+                                <td>SolidWords, Machine Shop, 3D Printer</td>
                             </tr>
                             <!-- <tr>
                                 <td>
@@ -213,7 +224,7 @@
             </div>
         </div>
 
-        <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg">
+        <!-- <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg"> -->
 
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
