Added Images for pasta

--- a/pasta.html
+++ b/pasta.html
@@ -186,6 +186,12 @@
                                 </td>
                                 <td>Fall 2015</td>
                             </tr>
+                            <tr>
+                                <td>
+                                    <strong>Tools:</strong>
+                                </td>
+                                <td>Solidworks</td>
+                            </tr>
                             <!-- <tr>
                                 <td>
                                     <strong>Share:</strong>
@@ -199,12 +205,16 @@
                         </table>
                     </div>
                 </div>
+                <br/>
+                <img width="300" src="assets/img/Pasta/angled.png">
+                <img width="300" src="assets/img/Pasta/topview.png">
+                <img width="300" src="assets/img/Pasta/rendered.png">
                 <div class="nk-gap-4 mt-14"></div>
 
             </div>
         </div>
 
-        <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg">
+        <!-- <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg"> -->
 
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
