Added portolio images for waroftheweb

--- a/war-of-the-web.html
+++ b/war-of-the-web.html
@@ -198,6 +198,10 @@
                                 <p>
                                     Moving forward, future work required for this game include more user testing, better game pace control, and better design for manufacturing. When playing the game with university-level peers there was an opportunity to observe gameplay and collect user feedback. While the user testing conducted so far has yielded useful feedback including “the informative cards are too complex for the younger audience”, the game has yet to be testing with the actual target audience, who would be internet users aged eight to eighteen. It is projected that one of the greatest challenges would be presenting the educational material in a language that all ages can understand and gain knowledge from. Testing with users of our target age is necessary to learn more about them and make effective improvements. A possible solution is to include the definitions and explanations of the introduced terms for added clarification, as well as providing the more curious users with credible resources for further research.
                                 </p>
+                                <p>
+                                    <img width="300" src="assets/img/WaroftheWeb/slider.jpg">
+                                    <img width="300" src="assets/img/WaroftheWeb/board.jpg">
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -228,15 +232,16 @@
                         </table>
                         <br/>
                         <p>
-                            <img src="assets/img/WaroftheWeb/Survey/knowledge.png" style="height:200px">
-                            <img src="assets/img/WaroftheWeb/Survey/techniquesToProtect-Before.png" style="height:200px">
-                            <img src="assets/img/WaroftheWeb/Survey/techniquesToProtect-After.png" style="height:200px">
-                            <img src="assets/img/WaroftheWeb/Survey/techniquesToHack-Before.png" style="height:200px">
-                            <img src="assets/img/WaroftheWeb/Survey/techniquesToHack-After.png" style="height:200px">
-                            <img src="assets/img/WaroftheWeb/Survey/catersToAgeGroups.png" style="height:200px">
-                            <img src="assets/img/WaroftheWeb/Survey/concerns.png" style="height:200px">
-                            <img src="assets/img/WaroftheWeb/Survey/informativeLevel.png" style="height:200px">
-                            <img src="assets/img/WaroftheWeb/Survey/favouritePart.png" style="height:200px">
+                            <img width="300" src="assets/img/WaroftheWeb/eventCard.png">
+                            <img width="300" src="assets/img/WaroftheWeb/Survey/knowledge.png">
+                            <img width="300" src="assets/img/WaroftheWeb/Survey/techniquesToProtect-Before.png">
+                            <img width="300" src="assets/img/WaroftheWeb/Survey/techniquesToProtect-After.png">
+                            <img width="300" src="assets/img/WaroftheWeb/Survey/techniquesToHack-Before.png">
+                            <img width="300" src="assets/img/WaroftheWeb/Survey/techniquesToHack-After.png">
+                            <img width="300" src="assets/img/WaroftheWeb/Survey/catersToAgeGroups.png">
+                            <img width="300" src="assets/img/WaroftheWeb/Survey/concerns.png">
+                            <img width="300" src="assets/img/WaroftheWeb/Survey/informativeLevel.png">
+                            <img width="300" src="assets/img/WaroftheWeb/Survey/favouritePart.png">
                         </p>
                     </div>
                 </div>
@@ -245,7 +250,7 @@
             </div>
         </div>
 
-        <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg">
+        <!-- <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg"> -->
 
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
