Added tools for snaptrax

--- a/snaptrax.html
+++ b/snaptrax.html
@@ -192,6 +192,12 @@
                                 </td>
                                 <td>Winter 2016</td>
                             </tr>
+                            <tr>
+                                <td>
+                                    <strong>Tools:</strong>
+                                </td>
+                                <td>HTML, CSS, JavaScript, Bootstrap, Clarifai API, Soundcloud API</td>
+                            </tr>
                             <!-- <tr>
                                 <td>
                                     <strong>Share:</strong>
