Added images process for Psyche

--- a/psyche.html
+++ b/psyche.html
@@ -200,12 +200,20 @@
                         </table>
                     </div>
                 </div>
+                <br/>
+                <img width="300" src="assets/img/Oil/Psyche/Step1.jpg">
+                <img width="300" src="assets/img/Oil/Psyche/Step2.jpg">
+                <img width="300" src="assets/img/Oil/Psyche/Step3.jpg">
+                <img width="300" src="assets/img/Oil/Psyche/Step4.jpg">
+                <img width="300" src="assets/img/Oil/Psyche/Step5.jpg">
+                <img width="300" src="assets/img/Oil/Psyche/Step6.jpg">
+                
                 <div class="nk-gap-4 mt-14"></div>
 
             </div>
         </div>
 
-        <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg">
+        <!-- <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg"> -->
 
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
