Added images for finshed slotmachine

--- a/slot-machine.html
+++ b/slot-machine.html
@@ -185,6 +185,12 @@
                                 </td>
                                 <td>Spring 2016</td>
                             </tr>
+                            <tr>
+                                <td>
+                                    <strong>Tools:</strong>
+                                </td>
+                                <td>Arduino Uno, motor, LCD Display, shoe box, buttons</td>
+                            </tr>
                             <!-- <tr>
                                 <td>
                                     <strong>Share:</strong>
@@ -198,12 +204,16 @@
                         </table>
                     </div>
                 </div>
+                <br/>
+                <img width="500" src="assets/img/SlotMachine/top.jpg">
+                <img width="500" src="assets/img/SlotMachine/wires.jpg">
+
                 <div class="nk-gap-4 mt-14"></div>
 
             </div>
         </div>
 
-        <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg">
+        <!-- <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg"> -->
 
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
