Added images to charcoal

--- a/charcoal-lady.html
+++ b/charcoal-lady.html
@@ -187,6 +187,12 @@
                                 </td>
                                 <td>Spring 2017</td>
                             </tr>
+                            <tr>
+                                <td>
+                                    <strong>Tools:</strong>
+                                </td>
+                                <td>Black and White charcoal pencils, HB Pencils</td>
+                            </tr>
                             <!-- <tr>
                                 <td>
                                     <strong>Share:</strong>
@@ -200,12 +206,18 @@
                         </table>
                     </div>
                 </div>
+                <br/>
+                <img width="400" src="assets/img/Charcoal/Lady/Step1.jpg">
+                <img width="400" src="assets/img/Charcoal/Lady/Step2.jpg">
+                <img width="400" src="assets/img/Charcoal/Lady/Step3.jpg">
+                <img width="400" src="assets/img/Charcoal/Lady/Step4.jpg">
+                
                 <div class="nk-gap-4 mt-14"></div>
 
             </div>
         </div>
 
-        <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg">
+        <!-- <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg"> -->
 
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
