Added pottery images

--- a/pottery.html
+++ b/pottery.html
@@ -200,12 +200,17 @@
                         </table>
                     </div>
                 </div>
+                <br/>
+                <img width="300" src="assets/img/Pottery/Step1.jpg">
+                <img width="300" src="assets/img/Pottery/Step2.jpg">
+                <img width="400" src="assets/img/Pottery/Step3.jpg">
+                <img width="300" src="assets/img/Pottery/Step4.jpg">
                 <div class="nk-gap-4 mt-14"></div>
 
             </div>
         </div>
 
-        <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg">
+        <!-- <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg"> -->
 
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
