--- a/dandelion.html
+++ b/dandelion.html
@@ -199,12 +199,14 @@
                         </table>
                     </div>
                 </div>
+                <br/>
+                <img width="500" src="assets/img/Acrylic/Dandelion.jpg">
                 <div class="nk-gap-4 mt-14"></div>
 
             </div>
         </div>
 
-        <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg">
+        <!-- <img class="nk-img-fit" src="assets/images/portfolio-4-video-thumb.jpg"> -->
 
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
