--- a/pasta.html
+++ b/pasta.html
@@ -219,12 +219,12 @@
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
             <div class="container">
-                <a class="nk-pagination-prev" href="#">
+                <a class="nk-pagination-prev" href="war-of-the-web.html">
                     <span class="pe-7s-angle-left"></span> Previous Work</a>
                 <a class="nk-pagination-center" href="portfolio.html">
                     <span class="nk-icon-squares"></span>
                 </a>
-                <a class="nk-pagination-next" href="#">Next Work <span class="pe-7s-angle-right"></span> </a>
+                <a class="nk-pagination-next" href="snaptrax.html">Next Work <span class="pe-7s-angle-right"></span> </a>
             </div>
         </div>
         <!-- END: Pagination -->
