--- a/pencil-hand.html
+++ b/pencil-hand.html
@@ -211,12 +211,12 @@
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
             <div class="container">
-                <a class="nk-pagination-prev" href="#">
+                <a class="nk-pagination-prev" href="pottery.html">
                     <span class="pe-7s-angle-left"></span> Previous Work</a>
                 <a class="nk-pagination-center" href="portfolio.html">
                     <span class="nk-icon-squares"></span>
                 </a>
-                <a class="nk-pagination-next" href="#">Next Work <span class="pe-7s-angle-right"></span> </a>
+                <a class="nk-pagination-next" href="rustic-daisy.html">Next Work <span class="pe-7s-angle-right"></span> </a>
             </div>
         </div>
         <!-- END: Pagination -->
