--- a/index.html
+++ b/index.html
@@ -162,14 +162,11 @@
                 <div class="nk-header-table-cell">
                     <div class="container">
 
-                        <h2 class="nk-subtitle text-white">Hi! I'm Caitlyn Kodric</h2>
-                        <h2 class="nk-subtitle text-white">My website is currently a work in progress.</h2>
-                        <h2 class="nk-subtitle text-white">Please check back in a few days.</h2>
-
+                        <h2 class="nk-subtitle text-white">Hi! I'm Caitlyn Kodric</h2>        
 
                         <h1 class="nk-title display-3 text-white">I am a dedicated and enthusiastic individual
                             <br>
-                            <em class="fw-400">who has a passion for design technology and the outdoors</em>
+                            <em class="fw-400">who has a passion for design technology and the outdoors.</em>
                         </h1>
 
 
