Remove Image Banner

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="nk-main">
 
         <!-- START: Header Title -->
-        <div class="nk-header-title nk-header-title-full">
+        <!-- <div class="nk-header-title nk-header-title-full">
             <div class="bg-image">
                 <div style="background-image: url('assets/img/2.jpg');"></div>
                 <div class="bg-image-overlay" style="background-color: rgba(12, 12, 12, 0.6);"></div>
@@ -188,7 +188,7 @@
 
         </div>
 
-        <div id="nk-header-title-scroll-down"></div>
+        <div id="nk-header-title-scroll-down"></div> -->
 
         <!-- END: Header Title -->
 
