--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
 
                         <p>
                             Hi, I'm Caitlyn! I'm currently a student at the University of Waterloo studying Systems Design Engineering. 
-                            I have a passion for painting and would love the opportunity to work in design. 
+                            I have a passion for arts and would love the opportunity to work in design. 
                             <br />
-                            Say hello! Send me an message at <a href="mailto:c.kodric@gmail.com">ckodric@gmail.com</a> or check me out on <a href="https://linkedin.com/caitlynkodric">LinkedIn</a>
+                            Say hello! Send me an message at <a href="mailto:c.kodric@gmail.com">ckodric@gmail.com</a>.</a>
                 
                         </p>
 
@@ -284,9 +284,9 @@
             <div class="nk-gap-4 mt-5"></div>
 
             <h2 class="text-xs-center display-4">Projects</h2>
-            <p class="text-xs-center">
+            <!-- <p class="text-xs-center">
                 Individul projects pictures coming soon ... 
-            </p>
+            </p> -->
             <div class="nk-gap mnt-6"></div>
             <div class="container">
                 <div class="row">
@@ -404,7 +404,7 @@
 
             <!-- START: Pagination -->
             <div class="nk-pagination nk-pagination-center">
-                <a href="portfolio.html">Load More Works</a>
+                <a href="portfolio.html">Load More</a>
             </div>
             <!-- END: Pagination -->
 
