Added Dribble Link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Caitlyn Kodric</title>
+    <title>CaitlynMicheleYaKodric</title>
 
     <meta name="description" content="Snow - Clean & Minimal Portfolio HTML template.">
     <meta name="keywords" content="portfolio, clean, minimal, blog, template, portfolio website">
@@ -141,6 +141,7 @@
                             <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
                             <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
                             <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://dribbble.com/ckodric"><i class="fa fa-dribbble"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -204,7 +205,11 @@
                         <div class="nk-gap-4 mt-9"></div>
 
                         <h2 class="display-4">About Me</h2>
-                        <div class="nk-gap mnt-5"></div>
+                        <div class="nk-gap mnt-5">
+                            <div style="border: solid black 1px">
+                                <img src="assets/img/headshot.png" style ="border-radius:100px; width:50%; height: 50%">
+                            </div>
+                        </div>
 
                         <p>
                             Hi, I'm Caitlyn! I'm currently a student at the University of Waterloo studying Systems Design Engineering. 
@@ -214,7 +219,7 @@
                 
                         </p>
 
-                        <!-- <img src="assets/images/about-me-signature.png" alt="" class="nk-img-fit">-->
+                        <!-- <img src="assets/images/about-me-signature.png" alt="" class="nk-img-fit"> -->
 
                         <!-- <div class="nk-gap-4 mt-25"></div> -->
                     </div>
@@ -280,20 +285,20 @@
         <!-- END: Features -->
 
         <!-- START: Portfolio -->
-        <div class="nk-box bg-white" id="projects">
-            <div class="nk-gap-4 mt-5"></div>
+        <!-- <div class="nk-box bg-white" id="projects"> -->
+            <!-- <div class="nk-gap-4 mt-5"></div> -->
 
-            <h2 class="text-xs-center display-4">Projects</h2>
+            <!-- <h2 class="text-xs-center display-4">Projects</h2> -->
             <!-- <p class="text-xs-center">
                 Individul projects pictures coming soon ... 
             </p> -->
-            <div class="nk-gap mnt-6"></div>
+            <!-- <div class="nk-gap mnt-6"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2">
                         <div class="text-xs-center">
-                            <!-- Check out some of my projects? -->
-                        </div>
+                            Check out some of my projects? -->
+                        <!-- </div>
                     </div>
                 </div>
             </div>
@@ -396,20 +401,20 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-            </div>
-            </div>
+            <!-- </div> -->
+            <!-- </div>  -->
             <!-- <div class="nk-gap-4 mt-15"></div> -->
 
             <!-- START: Pagination -->
-            <div class="nk-pagination nk-pagination-center">
+            <!-- <div class="nk-pagination nk-pagination-center">
                 <a href="portfolio.html">Load More</a>
-            </div>
+            </div> -->
             <!-- END: Pagination -->
 
-             <div class="nk-gap-4 mt-15"></div>
-        </div>
+             <!-- <div class="nk-gap-4 mt-15"></div> -->
+        <!-- </div> -->
         <!-- END: Portfolio -->
 
         <!-- START: Reviews -->
@@ -752,11 +757,12 @@
                             <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
                             <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
                             <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://dribbble.com/ckodric"><i class="fa fa-dribbble"></i></a></li>
                         </ul>
                     </div>
 
                     <div class="nk-footer-text">
-                        <p>Caitlyn Kodric</p>
+                        <p>CaitlynMicheleYaKodric</p>
                     </div>
                 </div>
             </div>
