--- a/slot-machine.html
+++ b/slot-machine.html
@@ -142,6 +142,7 @@
                         <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
                         <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
                         <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://dribbble.com/ckodric"><i class="fa fa-dribbble"></i></a></li>
                     </ul>
                     </div>
                 </div>
@@ -244,6 +245,7 @@
                             <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
                             <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
                             <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://dribbble.com/ckodric"><i class="fa fa-dribbble"></i></a></li>
                         </ul>
                     </div>
 
