Changed Title, footer, navlogo

--- a/pasta.html
+++ b/pasta.html
@@ -16,7 +16,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>CK | Portfolio</title>
+    <title>CMYK | Portfolio</title>
 
     <meta name="description" content="Snow - Clean & Minimal Portfolio HTML template.">
     <meta name="keywords" content="portfolio, clean, minimal, blog, template, portfolio website">
@@ -55,8 +55,8 @@
             <div class="container">
                 <div class="nk-nav-table">
                     <a href="index.html" class="nk-nav-logo">
-                        <img src="assets/img/Name - WH.svg" alt="" width="125" class="nk-nav-logo-onscroll">
-                        <img src="assets/img/Name - BL.svg" alt="" width="125">
+                        <img src="assets/img/Initials.png" alt="" width="100" class="nk-nav-logo-onscroll">
+                        <img src="assets/img/Initials.png" alt="" width="125">
                     </a>
 
                     <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
@@ -112,7 +112,7 @@
 
                         <div class="nk-nav-logo">
                             <a href="index.html" class="nk-nav-logo">
-                                <img src="assets/img/Name - WH.svg" alt="" width="85">
+                                <img src="assets/img/Initials.png" alt="" width="85">
                             </a>
                         </div>
 
@@ -251,7 +251,7 @@
                     </div>
 
                     <div class="nk-footer-text">
-                        <p>Caitlyn Kodric</p>
+                        <p>CaitlynMicheleYaKodric</p>
                     </div>
                 </div>
             </div>
