--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>CK | Blog</title>
+    <title>CMYK | Blog</title>
 
     <meta name="description" content="Snow - Clean & Minimal Portfolio HTML template.">
     <meta name="keywords" content="portfolio, clean, minimal, blog, template, portfolio website">
@@ -427,7 +427,7 @@
                     </div>
 
                     <div class="nk-footer-text">
-                        <p>2016 &copy; Design by Unvab. Code by nK</p>
+                        <p>CaitlynMicheleYaKodric</p>
                     </div>
                 </div>
             </div>
