--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -16,7 +16,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>CK | Portfolio</title>
+    <title>CMYK | Portfolio</title>
 
     <meta name="description" content="Snow - Clean & Minimal Portfolio HTML template.">
     <meta name="keywords" content="portfolio, clean, minimal, blog, template, portfolio website">
@@ -240,7 +240,7 @@
                     </div>
 
                     <div class="nk-footer-text">
-                        <p>2016 &copy; Design by Unvab. Code by nK</p>
+                        <p>CaitlynMicheleYaKodric</p>
                     </div>
                 </div>
             </div>
