Added Spotify Designs

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <div class="container">
                 <div class="nk-nav-table">
                     <a href="index.html" class="nk-nav-logo">
-                        <img src="assets/img/Name - WH.svg" alt="" width="125" class="nk-nav-logo-onscroll">
-                        <img src="assets/img/Name - BL.svg" alt="" width="125">
+                        <img src="assets/img/Initials.png" alt="" width="100" class="nk-nav-logo-onscroll">
+                        <img src="assets/img/Initials.png" alt="" width="125">
                     </a>
 
                     <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
@@ -110,7 +110,7 @@
 
                         <div class="nk-nav-logo">
                             <a href="index.html" class="nk-nav-logo">
-                                <img src="assets/img/Name - WH.svg" alt="" width="85">
+                                <img src="assets/img/Initials.png" alt="" width="85">
                             </a>
                         </div>
 
@@ -205,19 +205,21 @@
                         <div class="nk-gap-4 mt-9"></div>
 
                         <h2 class="display-4">About Me</h2>
-                        <div class="nk-gap mnt-5">
-                            <div style="border: solid black 1px">
-                                <img src="assets/img/headshot.png" style ="border-radius:100px; width:50%; height: 50%">
-                            </div>
+                        <div class="col-lg-12">
+                            <img src="assets/img/headshot.png" alt="Avatar" style="width:30%; border-radius:100%">
                         </div>
-
-                        <p>
-                            Hi, I'm Caitlyn! I'm currently a student at the University of Waterloo studying Systems Design Engineering. 
-                            I have a passion for arts and would love the opportunity to work in design. 
-                            <br />
-                            Say hello! Send me an message at <a href="mailto:c.kodric@gmail.com">ckodric@gmail.com</a>.</a>
-                
-                        </p>
+                        <div class="nk-gap mnt-6"></div>
+                        <div class="col-lg-12">
+                            <p>
+                                Hi, I'm Caitlyn Michele Ya Kodric! 
+                                <br/>
+                                I'm currently a student at the University of Waterloo studying Systems Design Engineering. 
+                                I have a passion for arts and would love the opportunity to work in design. 
+                                <br />
+                                Say hello! Send me an message at <a href="mailto:c.kodric@gmail.com">ckodric@gmail.com</a>.</a>
+                    
+                            </p>
+                        </div>
 
                         <!-- <img src="assets/images/about-me-signature.png" alt="" class="nk-img-fit"> -->
 
@@ -281,24 +283,24 @@
                 </div>
             </div>
             <div class="nk-gap-5 mnt-6"></div>
-        </div> -->
+        </div>  -->
         <!-- END: Features -->
 
         <!-- START: Portfolio -->
-        <!-- <div class="nk-box bg-white" id="projects"> -->
-            <!-- <div class="nk-gap-4 mt-5"></div> -->
+        <div class="nk-box bg-white" id="projects">
+            <div class="nk-gap-4 mt-5"></div>
 
-            <!-- <h2 class="text-xs-center display-4">Projects</h2> -->
+            <h2 class="text-xs-center display-4">Projects</h2>
             <!-- <p class="text-xs-center">
                 Individul projects pictures coming soon ... 
             </p> -->
-            <!-- <div class="nk-gap mnt-6"></div>
+            <div class="nk-gap mnt-6"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2">
-                        <div class="text-xs-center">
-                            Check out some of my projects? -->
-                        <!-- </div>
+                        <!-- <div class="text-xs-center">
+                            Check out some of my projects?
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -307,6 +309,20 @@
             <div class="container">
             <div class="nk-portfolio-list nk-isotope nk-isotope-3-cols">
 
+                <div class="nk-isotope-item" data-filter="Design">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="spotifyredesign.html" class="nk-portfolio-item-link"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/img/Spotify/Artist Frame.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                            <div>
+                                <h2 class="portfolio-item-title h3">Spotify Redesign</h2>
+                                <div class="portfolio-item-category">Figma</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="nk-isotope-item" data-filter="Mockup">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
@@ -322,7 +338,6 @@
                         </div>
                     </div>
                 </div>
-
 
                 <div class="nk-isotope-item" data-filter="Design">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
@@ -355,7 +370,6 @@
                     </div>
                 </div>
 
-
                 <div class="nk-isotope-item" data-filter="CAD">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="pasta.html" class="nk-portfolio-item-link"></a>
@@ -371,23 +385,6 @@
                     </div>
                 </div>
 
-
-                <div class="nk-isotope-item" data-filter="Mockup">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="snaptrax.html" class="nk-portfolio-item-link"></a>
-                        <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Snaptrax/browse.png');"></div>
-                        </div>
-                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
-                            <div>
-                                <h2 class="portfolio-item-title h3">Snaptrax</h2>
-                                <div class="portfolio-item-category">Mockup</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
                 <div class="nk-isotope-item" data-filter="ArtWork">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="psyche.html" class="nk-portfolio-item-link"></a>
@@ -401,20 +398,20 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
-            <!-- </div> -->
-            <!-- </div>  -->
-            <!-- <div class="nk-gap-4 mt-15"></div> -->
+            </div>
+            </div>
+            <div class="nk-gap-4 mt-15"></div>
 
             <!-- START: Pagination -->
-            <!-- <div class="nk-pagination nk-pagination-center">
+            <div class="nk-pagination nk-pagination-center">
                 <a href="portfolio.html">Load More</a>
-            </div> -->
+            </div>
             <!-- END: Pagination -->
 
-             <!-- <div class="nk-gap-4 mt-15"></div> -->
-        <!-- </div> -->
+             <div class="nk-gap-4 mt-15"></div>
+        </div>
         <!-- END: Portfolio -->
 
         <!-- START: Reviews -->
