--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>CK | Portfolio</title>
+    <title>CMYK | Portfolio</title>
 
     <meta name="description" content="Snow - Clean & Minimal Portfolio HTML template.">
     <meta name="keywords" content="portfolio, clean, minimal, blog, template, portfolio website">
@@ -54,8 +54,8 @@
             <div class="container">
                 <div class="nk-nav-table">
                     <a href="index.html" class="nk-nav-logo">
-                        <img src="assets/img/Name - WH.svg" alt="" width="125" class="nk-nav-logo-onscroll">
-                        <img src="assets/img/Name - BL.svg" alt="" width="125">
+                        <img src="assets/img/Initials.png" alt="" width="100" class="nk-nav-logo-onscroll">
+                        <img src="assets/img/Initials.png" alt="" width="125">
                     </a>
 
                     <ul class="nk-nav nk-nav-right hidden-md-down" data-nav-mobile="#nk-nav-mobile">
@@ -111,7 +111,7 @@
 
                         <div class="nk-nav-logo">
                             <a href="index.html" class="nk-nav-logo">
-                                <img src="assets/img/Name - WH.svg" alt="" width="85">
+                                <img src="assets/img/Initials.png" alt="" width="85">
                             </a>
                         </div>
 
@@ -179,7 +179,21 @@
 
             <div class="nk-portfolio-list nk-isotope nk-isotope-3-cols">
 
-
+                <div class="nk-isotope-item" data-filter="Design">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="spotifyredesign.html" class="nk-portfolio-item-link"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/img/Spotify/Artist Frame.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                            <div>
+                                <h2 class="portfolio-item-title h3">Spotify Redesign</h2>
+                                <div class="portfolio-item-category">Figma</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="nk-isotope-item" data-filter="Mockup">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="maer-jono.html" class="nk-portfolio-item-link"></a>
@@ -205,7 +219,7 @@
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
                                 <h2 class="portfolio-item-title h3">AquaBicylinder</h2>
-                                <div class="portfolio-item-category">Design</div>
+                                <div class="portfolio-item-category">Product Design</div>
                             </div>
                         </div>
                     </div>
@@ -386,7 +400,7 @@
                     </div>
                 </div>
 
-                <div class="nk-isotope-item" data-filter="ArtWork">
+                <!-- <div class="nk-isotope-item" data-filter="ArtWork">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="red-tulips.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
@@ -399,7 +413,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="nk-isotope-item" data-filter="ArtWork">
                         <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
@@ -448,7 +462,7 @@
                     </div>
 
                     <div class="nk-footer-text">
-                        <p>2016 &copy; Design by Unvab. Code by nK</p>
+                        <p>CaitlynMicheleYaKodric</p>
                     </div>
                 </div>
             </div>
