Changed Images for MJ, Spotify, SnT

--- a/portfolio.html
+++ b/portfolio.html
@@ -183,7 +183,7 @@
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="spotifyredesign.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Spotify/Artist Frame.jpg');"></div>
+                            <div style="background-image: url('assets/img/SpotifyTile.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -198,7 +198,7 @@
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="maer-jono.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/BreakInequality/HomePage.png');"></div>
+                            <div style="background-image: url('assets/img/MaerJonoTile.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -262,7 +262,7 @@
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="snaptrax.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Snaptrax/browse.png');"></div>
+                            <div style="background-image: url('assets/img/SnaptraxTile.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
