Changed Next work

--- a/maer-jono.html
+++ b/maer-jono.html
@@ -266,7 +266,7 @@
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
             <div class="container">
-                <a class="nk-pagination-prev" href="spotifyredesign.html">
+                <a class="nk-pagination-prev" href="pottery2.html">
                     <span class="pe-7s-angle-left"></span> Previous Work</a>
                 <a class="nk-pagination-center" href="portfolio.html">
                     <span class="nk-icon-squares"></span>
