--- a/portfolio.html
+++ b/portfolio.html
@@ -193,6 +193,21 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="nk-isotope-item" data-filter="Pottery">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="pottery2.html" class="nk-portfolio-item-link"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/img/Pottery2/Glazed.jpg');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                            <div>
+                                <h2 class="portfolio-item-title h3">Wheel Throwing</h2>
+                                <div class="portfolio-item-category">Pottery</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 
                 <div class="nk-isotope-item" data-filter="Mockup">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
